CS59_Intellij/tests/invalid/cstyleifstmt.dsl
/* invalid: if statement using c style syntax */
if (i < 0) {
    i = 0;
}